chapter 6: add figure 5.0

--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 \part{Exercises on TCP Connection Control}
-    Like previous lab, connect two host with one hub together.
+    Like previous lab, connect two host with one hub together (Figure~5.0).
 
 \section{Telnet terminal}
     While \lstinline[emph={your-host, remote-host}]{tcpdump -S host your-host  and remote-host} is running, execute: \lstinline[emph={your-host, remote-host}]{telnet remote-host date}.
