fix some report item

--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -74,8 +74,7 @@ ps -e | grep telnet
     \begin{report}
     \item What is Internet Service Daemon (\lstinline{inetd})?
 
-    \item Is \lstinline{inetd} started in your system?
-    Why?
+    \item Is \lstinline{inetd} started in your system? Why?
 
     \item Is \lstinline{xinetd} started in your system? What is its PID?
     \end{report}
@@ -93,7 +92,11 @@ more /etc/services
 
     Concatenate these two files using \lstinline{cat ser-more ser-cp > ser-cat}.
 
-    Display the file sizes using \lstinline{ls -l ser*}. Save the output. What are the sizes of files \path{ser-more}, \path{ser-cp}, and \path{ser-cat}?
+    Display the file sizes using \lstinline{ls -l ser*}. Save the output. 
+    
+    \begin{report}
+    \item What are the sizes of files \path{ser-more}, \path{ser-cp}, and \path{ser-cat}?
+    \end{report}
 
 \section{Network Command Manual}
     Read the \lstinline{man} pages for the following programs:
@@ -114,8 +117,7 @@ more /etc/services
     Throughout this lab you will use these commands rather extensively.
     
     \begin{report}
-    \item Explain the above commands briefly.
-    \item Two or three sentences per command would be adequate.
+    \item Explain the above commands briefly. (Two or three sentences per command would be adequate.)
     \end{report}
 
 \section{Packet Capturing}
