chapter 5: fix missing section for path discovery

--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -104,6 +104,8 @@ socket -u -i -n1 -w10000 host echo@
 
 
 \part{Path MTU Discovery Exercise}\label{sec:PMTUD}
+
+\section{Discover path MTU}
     Connect the routers and the workstations as shown in \hyperref[fig:5.5]{Figure~5.5} Change the IP
     addresses of your workstation accordingly. Note that the router IP addresses are
     the same as their default.
