--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -173,14 +173,14 @@ socket -i -u -n10 -w1200 -p5 remote-host 5555
     We will study the performance of FTP and TFTP for file transfer between two machines.
     By transferring the same file using these two protocols, we can compare the operations and performances of UDP and TCP. 
 
-    Three files (\path{large.dum}, \path{med.dum} and \path{small.dum}) with random contents are stored in the \path{/home/netlab} directory and in the \path{/home/netlab}\footnote{We change original path (\path{/tftpboot}) to \path{/home/netlab} to be same as ftp user path.} directory of each workstation in the lab.
+    Four files (\path{large.dum}, \path{med.dum}, \path{small.dum} and \path{this.dum}) with random contents are stored in the \path{/home/netlab} directory and in the \path{/home/netlab}\footnote{We change original path (\path{/tftpboot}) to \path{/home/netlab} to be same as ftp user path.} directory of each workstation in the lab.
     We will use the \lstinline{get} command to retrieve files from a remote host.
     When FTP is used, you need to change directory to \path{/home/netlab/} by \lstinline{cd /home/netlab} before retrieving the file.
     If you don’t know how to use \lstinline{tftp}, refer to its manual page.
 
 
 \section{TFTP and FTP}
-    In order to compare the transfer rates of FTP and TFTP, we will retrieve a large file from a remote server using FTP and TFTP, respectively.
+    In order to compare the transfer rates of FTP and TFTP, we will retrieve a large, med, small and thin file from a remote server using FTP and TFTP, respectively.
 
     First run First run the following \lstinline{tcpdump} command:
     \begin{lstlisting}[emph={your-host,remote-host}]
@@ -190,11 +190,11 @@ tcpdump host your-host and remote-host
     \begin{lstlisting}[emph={host}]
 $ ls /etc/xinetd.d/ # see services in xinetd
 $ tftp host
-tftp> get $filename # small,med,large
+tftp> get $filename # thin, small, med, large
 tftp> quit
 $ ftp host # Enter user and password -> netlab
 ftp> ls
-ftp> get $filename
+ftp> get $filename # thin, small, med, large
 ftp> quit
     \end{lstlisting}
     % Create \path{small.dum} with 10kB, \path{med.dum} with 1MB and \path{larg.dum} with 50MB.
